changed width of drop down bar and moved it to be central, fixed overlapping list item

--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -34,14 +34,13 @@
     justify-content: flex-end;
     list-style-type: none;
     position: relative;
-    right: 0;
+    right: 20px;
     line-height: 40px;
 }
 
 .Header>nav>ul>li {
     float: right;
     padding-top: 0px;
-    /* top: 40px; */
     width: 150px;
 }
 
@@ -49,7 +48,6 @@
     float: left !important;
     position: relative;
     top: 0px;
-    left: 30px;
 }
 
 .Header>nav>ul>* {
@@ -66,11 +64,11 @@
 .dropDown {
     display: none;
     position: relative;
-    width: 150px;
+    width: 200px;
     height: 400px;
-    background-color: green;
-    color: red;
-    right: 25px;
+    background-color: rgb(239, 224, 255);
+    color: rgb(19, 0, 58);
+    right: 50px;
     padding: 10px;
 }
 
